force-app/main/default/objects/License_Basis__c/fields/Highest_Package__c.field-meta.xml
<CustomField>
    <fullName>Highest_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates if this license basis is the highest package available for a Product Line.</description>
    <label>Highest Package</label>
    <type>Checkbox</type>
</CustomField>