force-app/main/default/objects/License_Basis__c/fields/License_Basis_Description__c.field-meta.xml
<CustomField>
    <fullName>License_Basis_Description__c</fullName>
    <description>As per Freshdesk Request #39180</description>
    <label>License Basis Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>